# FACE-RECOGNITION-C-

./: CMakeLists.txt  Dockerfile
assets/: temp.txt
include/: facedetect.hpp  requesthandler.hpp
src/: facedetect.cpp  main.cpp  requesthandler.cpp
